docs/v3.8.0rc1/_sources/gallery/extras/LP02.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/LP02.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_LP02.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_LP02.py:


LP02 Mode Detector
==================

This example demonstrates the initialization and visualization of an LP02 Mode detector using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-15

.. code-block:: Python

    from TypedUnit import ureg

    from PyMieSim.single.detector import CoherentMode
    from PyMieSim.single import plot_system








.. GENERATED FROM PYTHON SOURCE LINES 16-17

Initializing the detector

.. GENERATED FROM PYTHON SOURCE LINES 17-25

.. code-block:: Python

    detector = CoherentMode(
        mode_number="LP11",  # Specifying LP02 mode
        sampling=500 * ureg.AU,  # Number of sampling points
        NA=0.3 * ureg.AU,  # Numerical Aperture
        gamma_offset=0 * ureg.degree,  # Gamma offset
        phi_offset=40 * ureg.degree,  # Phi offset in degrees
    )








.. GENERATED FROM PYTHON SOURCE LINES 26-27

Plotting the detector

.. GENERATED FROM PYTHON SOURCE LINES 27-28

.. code-block:: Python

    plot_system(detector)



.. image-sg:: /gallery/extras/images/sphx_glr_LP02_001.png
   :alt: LP02
   :srcset: /gallery/extras/images/sphx_glr_LP02_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.288 seconds)


.. _sphx_glr_download_gallery_extras_LP02.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: LP02.ipynb <LP02.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: LP02.py <LP02.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: LP02.zip <LP02.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
